# TUBS-KI-Toolbox_openai_wrapper

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  FEATURE_SUPPORT.md  README.md  docker-compose.local-debug.yml  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/: errors.py
app/models/: anthropic.py  context.py  openai.py  responses.py  tubs.py
app/services/: anthropic_translation.py  context_chunking.py  context_compaction.py  context_embeddings.py  context_ingest.py  context_runtime.py  context_store.py  context_tools.py  conversation_state.py  debug_trace.py  model_map.py  openai_bridge.py  prompt.py  staged_ingestion.py  staged_ingestion_store.py  thread_policy.py  thread_recovery.py  tool_error_guidance.py  tool_validation.py  translation.py  tubs_client.py
reference/: Example_command.txt  gradio_example.py
tests/: conftest.py  openai_test.py  parallel_tool_calling.py  tool_calling_test.py
tests/anthropic/: test_01_core_and_stops.py  test_02_streaming.py  test_03_json.py  test_04_vision.py  test_05_tools_parallel.py  test_06_final_parity.py
tests/final_tests/: test_01_core_and_stops.py  test_02_streaming.py  test_03_json_structured.py  test_04_vision.py  test_05_tools_parallel.py  test_06_final_parity_check.py
tests/openai/: test_01_core_and_stops.py  test_02_streaming.py  test_03_json_structured.py  test_04_vision.py  test_05_tools_parallel.py  test_06_final_parity_check.py
tests/unit/: test_anthropic_compat.py  test_chat_completions.py  test_chat_completions_compat.py  test_context_chunking.py  test_context_memory.py  (+5 more)
(+4 files in other folders)
