[project]
name = "tubs-openai-wrapper"
version = "0.1.0"
description = "FastAPI wrapper for TU BS KI-Toolbox API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic>=2.7.4",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "anthropic>=0.40.0",
    "openai>=1.30.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
